--- a/Project/src/main/resources/ATMV_addNode_popup.fxml
+++ b/Project/src/main/resources/ATMV_addNode_popup.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.ATMVAddNodePopup">
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
+<StackPane fx:id="parentPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.ATMVAddNodePopup">
     <children>
-        <Text layoutX="261.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello World"/>
+        <ImageView fx:id="backgroundImage" pickOnBounds="true" fitHeight="400" fitWidth="600">
+            <Image url="@Hospitalbackground.png"/>
+            <effect>
+                <ColorAdjust brightness="0.41"/>
+            </effect>
+        </ImageView>
     </children>
-</AnchorPane>
+</StackPane>
