--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -8,120 +8,158 @@
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerLM">
+<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerLM">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/css/background.css">
-         <children>
-            <ImageView fitWidth="900.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/MainMenu.png" />
-               </image>
-            </ImageView>
-            <BorderPane prefHeight="35.0" prefWidth="900.0">
-               <effect>
-                  <Blend />
-               </effect>
-               <top>
-                  <JFXTabPane fx:id="tabs" prefHeight="600.0" prefWidth="900.0" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                     <tabs>
-                        <Tab text="Guest">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <Text fill="WHITE" layoutX="82.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Brigham &amp; Women’s Hospital! " textAlignment="CENTER" AnchorPane.leftAnchor="82.0" AnchorPane.topAnchor="217.15234375">
-                                       <font>
-                                          <Font name="System Bold Italic" size="36.0" />
-                                       </font>
-                                    </Text>
-                                    <JFXButton fx:id="loginAsGuestButton" layoutX="349.0" layoutY="334.0" onAction="#setLoginAsGuestButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Continue As A Guest" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold Italic" size="14.0" />
-                                       </font>
-                                    </JFXButton>
-                                    <ImageView fitHeight="150.0" fitWidth="300.0" layoutX="300.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../images/BWH.JPG" />
-                                       </image>
-                                    </ImageView>
-                                 </children></AnchorPane>
-                          </content>
-                        </Tab>
-                        <Tab fx:id="user_tab" style="-fx-text-fill: #090a0f;" text="User">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="6.0">
-                                 <children>
-                                    <JFXTextField fx:id="userUsernameTextField" layoutX="350.0" layoutY="223.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" />
-                                    <JFXPasswordField fx:id="userPasswordTextField" layoutX="350.0" layoutY="333.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" />
-                                    <Text fill="WHITE" layoutX="300.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Username" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="180.259765625">
-                                       <font>
-                                          <Font size="25.0" />
-                                       </font>
-                                    </Text>
-                                    <Text fill="WHITE" layoutX="300.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-                                       <font>
-                                          <Font size="25.0" />
-                                       </font>
-                                    </Text>
-                                    <Text fill="#090a0f" layoutX="361.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, User">
-                                       <font>
-                                          <Font name="System Bold Italic" size="48.0" />
-                                       </font>
-                                    </Text>
-                                    <JFXButton fx:id="loginAsUserButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" />
-                                    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="15.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../images/BWH.JPG" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </Tab>
-                        <Tab fx:id="admin_tab" text="Administrator">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <JFXTextField fx:id="adminUsernameTextField" layoutX="350.0" layoutY="238.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" />
-                                    <JFXPasswordField fx:id="adminPasswordTextField" layoutX="350.0" layoutY="335.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" />
-                                    <JFXButton fx:id="loginAsAdminButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                    </JFXButton>
-                                    <Text fill="WHITE" layoutX="298.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrator's Username" AnchorPane.leftAnchor="298.0" AnchorPane.topAnchor="196.0224609375">
-                                       <font>
-                                          <Font size="25.0" />
-                                       </font>
-                                    </Text>
-                                    <Text fill="WHITE" layoutX="298.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-                                       <font>
-                                          <Font size="25.0" />
-                                       </font>
-                                    </Text>
-                                    <Text fill="#090a0f" layoutX="280.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Administrator">
-                                       <font>
-                                          <Font name="System Bold Italic" size="48.0" />
-                                       </font>
-                                    </Text>
-                                    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="15.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../images/BWH.JPG" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </Tab>
-                     </tabs>
-                  </JFXTabPane>
-               </top>
-            </BorderPane>
-         </children>
-      </AnchorPane>
+      <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/MainMenu.png" />
+         </image>
+      </ImageView>
+      <BorderPane prefHeight="35.0">
+         <effect>
+            <Blend />
+         </effect>
+         <top>
+            <JFXTabPane fx:id="tabs" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+               <tabs>
+                  <Tab text="Guest">
+                    <content>
+                        <GridPane>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints percentHeight="20" vgrow="ALWAYS" />
+                              <RowConstraints percentHeight="20" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="20" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="20" vgrow="SOMETIMES" />
+                              <RowConstraints vgrow="ALWAYS" />
+                           </rowConstraints>
+                           <children>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Brigham &amp; Women’s Hospital! " textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font name="System Bold Italic" size="36.0" />
+                                 </font>
+                              </Text>
+                              <JFXButton fx:id="loginAsGuestButton" onAction="#setLoginAsGuestButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Continue As A Guest" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font name="System Bold Italic" size="14.0" />
+                                 </font>
+                              </JFXButton>
+                              <ImageView fitHeight="150.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                 <image>
+                                    <Image url="@../images/BWH.JPG" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </GridPane>
+                    </content>
+                  </Tab>
+                  <Tab fx:id="user_tab" style="-fx-text-fill: #090a0f;" text="User">
+                     <content>
+                        <GridPane>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints vgrow="ALWAYS" />
+                           </rowConstraints>
+                           <children>
+                              <JFXTextField fx:id="userUsernameTextField" stylesheets="/css/controlsGridpane.css" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" GridPane.rowIndex="4" GridPane.halignment="CENTER" />
+                              <JFXPasswordField fx:id="userPasswordTextField" stylesheets="/css/controlsGridpane.css" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" GridPane.rowIndex="6" GridPane.halignment="CENTER" />
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Username" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="5" GridPane.halignment="CENTER">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, User" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font name="System Bold Italic" size="48.0" />
+                                 </font>
+                              </Text>
+                              <JFXButton fx:id="loginAsUserButton" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                 <image>
+                                    <Image url="@../images/BWH.JPG" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </GridPane>
+                     </content>
+                  </Tab>
+                  <Tab fx:id="admin_tab" text="Administrator">
+                    <content>
+                        <GridPane>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+                              <RowConstraints vgrow="ALWAYS" />
+                           </rowConstraints>
+                           <children>
+                              <JFXTextField fx:id="adminUsernameTextField" stylesheets="/css/controlsGridpane.css" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" GridPane.rowIndex="4" GridPane.halignment="CENTER"/>
+                              <JFXPasswordField fx:id="adminPasswordTextField" stylesheets="/css/controlsGridpane.css" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" GridPane.rowIndex="6" GridPane.halignment="CENTER"/>
+                              <JFXButton fx:id="loginAsAdminButton" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.rowIndex="7" GridPane.halignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </JFXButton>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrator's Username" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Administrator" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font name="System Bold Italic" size="48.0" />
+                                 </font>
+                              </Text>
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                 <image>
+                                    <Image url="@../images/BWH.JPG" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </GridPane>
+                    </content>
+                  </Tab>
+               </tabs>
+            </JFXTabPane>
+         </top>
+      </BorderPane>
    </children>
-</AnchorPane>
+</StackPane>
