--- a/Project/src/main/resources/application/user_main_menu_main.fxml
+++ b/Project/src/main/resources/application/user_main_menu_main.fxml
@@ -6,79 +6,92 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerMMM">
+
+<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerMMM">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Hospitalbackground.png" />
+         </image>
+      </ImageView>
+      <BorderPane>
+         <top>
+            <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="Back">
+                  <items>
+                    <MenuItem fx:id="backMenuItem" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previous page" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </top>
+      </BorderPane>
+      <GridPane>
+         <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" percentHeight="15" vgrow="ALWAYS" />
+            <RowConstraints minHeight="10.0" percentHeight="15" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="30" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+         </rowConstraints>
          <children>
-            <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/css/background.css">
-               <children>
-                  <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
+            <JFXButton fx:id="serviceRequestButton" alignment="TOP_CENTER" onAction="#setServiceRequestButton" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Service Request" GridPane.rowIndex="2" GridPane.columnIndex="3">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="180.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/Hospitalbackground.png" />
+                        <Image url="@../images/024-doctor-1.png" />
                      </image>
                   </ImageView>
-                  <BorderPane>
-                     <top>
-                        <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                          <menus>
-                            <Menu mnemonicParsing="false" text="Back">
-                              <items>
-                                <MenuItem fx:id="backMenuItem" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previous page" />
-                              </items>
-                            </Menu>
-                          </menus>
-                        </MenuBar>
-                     </top>
-                  </BorderPane>
-                  <JFXButton fx:id="serviceRequestButton" alignment="TOP_CENTER" buttonType="RAISED" contentDisplay="BOTTOM" layoutX="606.0" layoutY="195.0" maxHeight="240.0" onAction="#setServiceRequestButton" prefHeight="40.0" prefWidth="400.0" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Service Request" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="180.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/024-doctor-1.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
-                  <Text fill="WHITE" layoutX="316.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Home">
-                     <font>
-                        <Font name="System Bold" size="45.0" />
-                     </font>
-                  </Text>
-                  <JFXButton fx:id="reservationsButton" alignment="TOP_CENTER" buttonType="RAISED" contentDisplay="BOTTOM" layoutX="373.0" layoutY="195.0" maxHeight="240.0" maxWidth="180.0" onAction="#setReservationsButton" prefHeight="40.0" prefWidth="400.0" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Reserve a Room" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="180.0" fitWidth="150.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/RoomReservation.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
-                  <JFXButton fx:id="pathfindingButton" alignment="TOP_CENTER" buttonType="RAISED" contentDisplay="BOTTOM" layoutX="136.0" layoutY="195.0" maxHeight="240.0" onAction="#setPathfindingButton" prefHeight="245.0" prefWidth="400.0" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Find Path" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="180.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/road-map.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
-               </children>
-            </AnchorPane>
+               </graphic>
+            </JFXButton>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Home" GridPane.columnIndex="1"  GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.halignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="45.0" />
+               </font>
+            </Text>
+            <JFXButton fx:id="reservationsButton" alignment="TOP_CENTER" onAction="#setReservationsButton" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Reserve a Room" GridPane.rowIndex="2" GridPane.columnIndex="2">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="180.0" fitWidth="150.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/RoomReservation.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="pathfindingButton" alignment="TOP_CENTER" onAction="#setPathfindingButton" styleClass="jfx-button-main-menu" stylesheets="@../css/background.css" text="Find Path" GridPane.rowIndex="2" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="180.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/road-map.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
          </children>
-      </AnchorPane>
+      </GridPane>
    </children>
-</AnchorPane>
+</StackPane>
