--- a/Project/src/main/resources/admintools/admin_tools_view_service_request.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_view_service_request.fxml
@@ -10,60 +10,57 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVSR">
+
+<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVSR">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/css/background.css">
-         <children>
-            <ImageView fitWidth="900.0" opacity="0.6" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/Hospitalbackground.png" />
-               </image>
-            </ImageView>
-            <BorderPane>
-               <top>
-                  <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="Back">
-                        <items>
-                          <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
-                        </items>
-                      </Menu>
-                      <Menu fx:id="homeButton" mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
-                           <items>
-                              <MenuItem text="HOME" />
-                           </items>
-                        </Menu>
-                    </menus>
-                     <effect>
-                        <ColorAdjust brightness="0.19" contrast="0.01" hue="0.01" saturation="-0.44">
-                           <input>
-                              <DropShadow />
-                           </input>
-                        </ColorAdjust>
-                     </effect>
-                  </MenuBar>
-               </top>
-               <center>
-                  <TableView fx:id="serviceRequestTable" maxWidth="800.0" prefHeight="530.0" prefWidth="800.0" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                    <columns>
-                      <TableColumn prefWidth="130.0" text="Request Room" />
-                      <TableColumn prefWidth="130.0" text="Service Type" />
-                        <TableColumn prefWidth="100.0" text="UserID" />
-                        <TableColumn prefWidth="100.0" text="Resolved" />
-                        <TableColumn prefWidth="160.0" text="Resolver" />
-                        <TableColumn prefWidth="180.0" text="Additional Messages" />
-                    </columns>
-                     <styleClass>
-                        <String fx:value="table-view" />
-                        <String fx:value="table-row-cell" />
-                     </styleClass>
-                  </TableView>
-               </center>
-            </BorderPane>
-         </children>
-      </AnchorPane>
+      <ImageView fx:id="backgroundImage" opacity="0.6" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Hospitalbackground.png" />
+         </image>
+      </ImageView>
+      <BorderPane>
+         <top>
+            <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="Back">
+                  <items>
+                    <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
+                  </items>
+                </Menu>
+                <Menu fx:id="homeButton" mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
+                     <items>
+                        <MenuItem text="HOME" />
+                     </items>
+                  </Menu>
+              </menus>
+               <effect>
+                  <ColorAdjust brightness="0.19" contrast="0.01" hue="0.01" saturation="-0.44">
+                     <input>
+                        <DropShadow />
+                     </input>
+                  </ColorAdjust>
+               </effect>
+            </MenuBar>
+         </top>
+         <center>
+            <TableView fx:id="serviceRequestTable" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn prefWidth="130.0" text="Request Room" />
+                <TableColumn prefWidth="130.0" text="Service Type" />
+                  <TableColumn prefWidth="100.0" text="UserID" />
+                  <TableColumn prefWidth="100.0" text="Resolved" />
+                  <TableColumn prefWidth="160.0" text="Resolver" />
+                  <TableColumn prefWidth="180.0" text="Additional Messages" />
+              </columns>
+               <styleClass>
+                  <String fx:value="table-view" />
+                  <String fx:value="table-row-cell" />
+               </styleClass>
+            </TableView>
+         </center>
+      </BorderPane>
    </children>
-</AnchorPane>
+</StackPane>
