--- a/Project/src/main/resources/admintools/admin_tools_view_nodes.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_view_nodes.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,63 +11,66 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVN">
+
+<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVN">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/css/background.css">
-         <children>
-            <ImageView fitWidth="900.0" opacity="0.6" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/Hospitalbackground.png" />
-               </image>
+      <ImageView fx:id="backgroundImage" opacity="0.6" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Hospitalbackground.png" />
+         </image>
+         <effect>
+            <ColorAdjust brightness="-0.15" hue="0.05" />
+         </effect>
+      </ImageView>
+      <BorderPane stylesheets="@../css/background.css">
+         <top>
+            <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="Back">
+                  <items>
+                    <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
+                  </items>
+                </Menu>
+                <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="HOME" />
+                     </items>
+                  </Menu>
+              </menus>
                <effect>
-                  <ColorAdjust brightness="-0.15" hue="0.05" />
+                  <DropShadow />
                </effect>
-            </ImageView>
-            <BorderPane stylesheets="@../css/background.css">
-               <top>
-                  <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="Back">
-                        <items>
-                          <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
-                        </items>
-                      </Menu>
-                      <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="HOME" />
-                           </items></Menu>
-                    </menus>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </MenuBar>
-               </top>
-               <center>
-                  <TableView fx:id="nodeTable" maxWidth="850.0" prefHeight="520.0" prefWidth="850.0" BorderPane.alignment="CENTER">
-                    <columns>
-                      <TableColumn prefWidth="60.0" text="NodeID" />
-                      <TableColumn prefWidth="60.0" text="xcrood" />
-                        <TableColumn prefWidth="60.0" text="ycrood" />
-                        <TableColumn prefWidth="60.0" text="floor" />
-                        <TableColumn prefWidth="60.0" text="building" />
-                        <TableColumn text="nodeType" />
-                        <TableColumn prefWidth="250.0" text="longName" />
-                        <TableColumn prefWidth="120.0" text="shortName" />
-                        <TableColumn prefWidth="100.0" text="Remove" />
-                    </columns>
-                  </TableView>
-               </center>
-            </BorderPane>
-            <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="756.0" layoutY="553.0" onAction="#setAddButton" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Add Node" textFill="WHITE">
+            </MenuBar>
+         </top>
+         <center>
+            <TableView fx:id="nodeTable" maxWidth="850.0" prefHeight="520.0" prefWidth="850.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn prefWidth="60.0" text="NodeID" />
+                <TableColumn prefWidth="60.0" text="xcrood" />
+                  <TableColumn prefWidth="60.0" text="ycrood" />
+                  <TableColumn prefWidth="60.0" text="floor" />
+                  <TableColumn prefWidth="60.0" text="building" />
+                  <TableColumn text="nodeType" />
+                  <TableColumn prefWidth="250.0" text="longName" />
+                  <TableColumn prefWidth="120.0" text="shortName" />
+                  <TableColumn prefWidth="100.0" text="Remove" />
+              </columns>
+            </TableView>
+         </center>
+         <bottom>
+            <JFXButton fx:id="addButton" buttonType="RAISED" onAction="#setAddButton" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Add Node" textFill="WHITE" BorderPane.alignment="CENTER_RIGHT">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
+               </BorderPane.margin>
             </JFXButton>
-         </children>
-      </AnchorPane>
+         </bottom>
+      </BorderPane>
    </children>
-</AnchorPane>
+</StackPane>
