--- a/Project/src/main/resources/admintools/admin_tools_view_service_request.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_view_service_request.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.StackPane?>
 
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVSR">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATVSR">
    <children>
       <ImageView fx:id="backgroundImage" opacity="0.6" pickOnBounds="true" preserveRatio="true">
          <image>
