--- a/Project/src/main/resources/servicerequests/service_request_audio_visual.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_audio_visual.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRAVE">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRAVE">
    <children>
             <ImageView fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                 <image>
