--- a/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
@@ -22,8 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
    <children>
             <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
                 <image>
@@ -52,6 +51,7 @@
          <left>
             <GridPane>
                <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
                </columnConstraints>
                <rowConstraints>
@@ -65,8 +65,8 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.rowIndex="6" />
-                  <JFXButton fx:id="cancelButton" contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.rowIndex="7">
+                  <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <JFXButton fx:id="cancelButton" contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.columnIndex="1" GridPane.rowIndex="7">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -75,28 +75,28 @@
                         </ImageView>
                      </graphic>
                   </JFXButton>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="BabySitting">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="BabySitting" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold Italic" size="36.0" />
                      </font>
                   </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Shiyi Liu" GridPane.rowIndex="1">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Shiyi Liu" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Text>
-                  <JFXTextField fx:id="serviceMessage" alignment="TOP_LEFT" prefHeight="254.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="5" />
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Additional Messages" GridPane.rowIndex="4">
+                  <JFXTextField fx:id="serviceMessage" alignment="TOP_LEFT" prefHeight="254.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Additional Messages" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Selection" GridPane.rowIndex="2">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Selection" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
-                  <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="3" />
+                  <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
          </left>
@@ -110,11 +110,13 @@
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                </rowConstraints>
                <children>
-                  <FlowPane hgap="10.0" vgap="10.0" GridPane.rowIndex="1">
+                  <FlowPane alignment="CENTER" hgap="20.0" vgap="20.0" GridPane.rowIndex="1">
                      <children>
                         <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                            <children>
@@ -146,6 +148,10 @@
                               <CheckBox fx:id="bath" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Bath" textFill="#015080" />
                            </children>
                         </Pane>
+                     </children>
+                  </FlowPane>
+                  <FlowPane alignment="CENTER" hgap="20.0" vgap="20.0" GridPane.rowIndex="3">
+                     <children>
                         <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
