Hopefully fixed all back buttons

--- a/Project/src/main/resources/servicerequests/service_request_sanitation.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_sanitation.fxml
@@ -28,7 +28,7 @@
                       <top>
                           <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                               <menus>
-                                  <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
+                                  <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Back">
                            <items>
                               <MenuItem mnemonicParsing="false" text="HOME" />
                            </items>
