--- a/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
@@ -22,7 +22,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
    <children>
             <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
@@ -34,7 +33,7 @@
                 <top>
                     <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                         <menus>
-                            <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
+                            <Menu mnemonicParsing="false" onAction="#setCancelButton" onShowing="#setHomeButton" text="Back">
                      <items>
                         <MenuItem mnemonicParsing="false" text="HOME" />
                      </items>
@@ -70,7 +69,7 @@
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@icon/cancel%20(1).png" />
+                              <Image url="@../icon/cancel2.png" />
                            </image>
                         </ImageView>
                      </graphic>
