Back buttons funtional

--- a/Project/src/main/resources/servicerequests/service_request_audio_visual.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_audio_visual.fxml
@@ -29,7 +29,7 @@
                 <top>
                     <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                         <menus>
-                            <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
+                            <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setCancelButton" onShowing="#setHomeButton" text="Home">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#setHomeButton" text="HOME" />
                      </items>
@@ -69,7 +69,7 @@
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@icon/cancel%20(1).png" />
+                              <Image url="@../icon/cancel2.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -108,7 +108,7 @@
          <center>
             <ImageView fitWidth="575.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                     <image>
-                        <Image url="@02_thesecondfloor.png" />
+                        <Image url="@../maps/02_thesecondfloor.png" />
                     </image>
             </ImageView>
          </center>
