--- a/Project/src/main/resources/servicerequests/service_request_flower_delivery.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_flower_delivery.fxml
@@ -72,7 +72,7 @@
                            <graphic>
                               <ImageView fitHeight="25.0" fitWidth="25.0" onMouseClicked="#setCancelButton" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/cancel2.png" />
+                                    <Image url="@../icon/cancel2.png" />
                                  </image>
                               </ImageView>
                            </graphic>
