--- a/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
@@ -50,7 +50,7 @@
          <right>
             <ImageView fitHeight="575.0" fitWidth="650.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
-                  <Image url="@02_thesecondfloor.png" />
+                  <Image url="@../maps/02_thesecondfloor.png" />
                </image>
             </ImageView>
          </right>
