--- a/Project/src/main/resources/servicerequests/service_request_prescription_services_main.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_prescription_services_main.fxml
@@ -50,7 +50,7 @@
          <right>
             <ImageView fitHeight="575.0" fitWidth="650.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
-                  <Image url="@02_thesecondfloor.png" />
+                  <Image url="@../maps/02_thesecondfloor.png" />
                </image>
             </ImageView>
          </right>
@@ -80,7 +80,7 @@
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@icon/cancel%20(1).png" />
+                              <Image url="@../icon/cancel2.png" />
                            </image>
                         </ImageView>
                      </graphic>
