--- a/Project/src/main/resources/servicerequests/service_request_security.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_security.fxml
@@ -50,7 +50,7 @@
                            <graphic>
                               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/cancel%20(1).png" />
+                                    <Image url="@../icon/cancel2.png" />
                                  </image>
                               </ImageView>
                            </graphic>
